--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -26,6 +26,8 @@ jobs:
         run: npm i -g surge
       - name: Build
         run: npm run build
+      - name: Test
+        run: npm run test
       - name: Deploy to houm-juan.surge.sh
         uses: dswistowski/surge-sh-action@v1
         with:
